.gradle/gradle.log
#################################################
         ForgeGradle 2.0-SNAPSHOT        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP 9.10               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\util\utilclasses\UtilM.java:771: error: illegal start of expression
			.filter(entry->Objects.equals(entry.getValue(), value))
			              ^
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\util\utilclasses\UtilM.java:772: error: ')' expected
			.map(Map.Entry::getKey)
			              ^
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\util\utilclasses\UtilM.java:772: error: illegal start of expression
			.map(Map.Entry::getKey)
			               ^
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\util\utilclasses\UtilM.java:772: error: ';' expected
			.map(Map.Entry::getKey)
			                      ^
4 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 33.163 secs
